# ising-tebd

./: LICENSE  README.md  __init__.py  pyproject.toml
results/: presentation.ipynb
results/data/: betas_A.npy  mag_curve_J=1_chi=100_eps=1e-20_Nx=20_steps=10_A.npy  mag_curve_J=1_chi=60_eps=1e-12_Nx=80_steps=40_B.npy
src/: TensorNetwork.py  observables.py  tebd.py
